# sparknet

./: meson.build  test.c
include/: layer.h  network.h  synapse.h
src/: layer.c  network.c  synapse.c
